# esp32_edge_ai_benchmark

./: .gitignore  train_models.ipynb  visual.ipynb
firmware/generator/: CMakeLists.txt  generator.py  test.py
firmware/generator/main/: CMakeLists.txt  app_main.c  control.c  dac_output.c  dac_output.h  main.c  signal_gen.c  signal_gen.h  uart_labels.c  uart_labels.h  waveform_tables.c  waveform_tables.h
firmware/inference/: CMakeLists.txt  collect.py  collect_data.py  inference_logger.py  partitions.csv  test_adc.py
firmware/inference/arrays/: cnn_float32_model.c  cnn_float32_model.h  cnn_int8_model.c  cnn_int8_model.h  hybrid_float32_model.c  hybrid_float32_model.h  hybrid_int8_model.c  hybrid_int8_model.h  mlp_float32_model.c  mlp_float32_model.h  mlp_int8_model.c  mlp_int8_model.h
firmware/inference/esp32_collected_data/: collection_summary_20260111_124517.json
firmware/inference/main/: CMakeLists.txt  Kconfig.projbuild  adc_sampling.c  adc_sampling.h  app_main.c  benchmark.c  benchmark.h  clock_sync.c  clock_sync.h  common.h  data_collection.c  data_collection.h  feature_extraction.c  feature_extraction.h  feature_utils.c  feature_utils.h  idf_component.yml  inference.c  inference.h  logger.c  logger.h  main.c  metrics.c  ml_contract.h  model_config.h  model_data.h  output.c  output.h  preprocessing.c  preprocessing.h  signal_acquisition.c  signal_acquisition.h  signal_processing.h  signal_validation.c  statistics.c  statistics.h  system_health.c  system_monitor.h  tflite_wrapper.cpp  tflite_wrapper.h
firmware/inference/models/: cnn_float32_model.tflite  cnn_int8_model.tflite  hybrid_float32_model.tflite  hybrid_int8_model.tflite  mlp_float32_model.tflite  mlp_int8_model.tflite  training_summary.json
